GNOME Bugzilla – Bug 620769
[PATCH] gobject-introspection crashes on strict-aligned platforms
Last modified: 2015-02-07 16:53:17 UTC
Created attachment 162882 [details] [review] Fix crashes on strict-aligned platforms Try to use the g-ir-scanner on FreeBSD sparc64 triggers a crash due to alignment issues when copying certain value types. The reason for this is that sparc64 requires strict alignment. The attached patch, produced by Marius Strobl, corrects this problem.
The stack trace seen when trying to build gobject-introspection on such a platform is:
+ Trace 222272
Comment on attachment 162882 [details] [review] Fix crashes on strict-aligned platforms This patch does not apply on trunk, it needs to be updated.
Joe, do you have an updated patch for this?
Created attachment 169592 [details] [review] Updated patch for strict align platforms
Thanks for the patch
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]