[girepository] Support strict align platforms

Such as Sparc64.

https://bugzilla.gnome.org/show_bug.cgi?id=620769